--- a/src/style.css
+++ b/src/style.css
@@ -6,23 +6,13 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-body > div {
+#container {
     height: 100vh;
+    width: 100vw;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
 }
 
-body > div > div {
-    text-align: left;
+.section {
+    flex: 1;
 }
-
-img {
-    width: 200px;
-}
-
-h1 {
-    color: #FF5770;
-}
-
